tests/compiler/errors/generic_enum_type_mismatch.casa
# expect: SIGNATURE_MISMATCH
import "std"

fn bad -> Option[str] {
    42 Option::Some
}
